--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="eventos">
         <div class="formulario">
             <form action="">
-                <!-- Agregué id="nombreEvento" y id="fechaEvento" para coincidir con el JS -->
+                <h1>Agregar evento</h1>
                 <input type="text" id="nombreEvento" placeholder="Nombre del evento">
                 <input type="date" id="fechaEvento">
                 <input type="submit" id="agregar" value="Agregar">
