--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <body>
     <div class="eventos">
         <div class="formulario">
+            <h1>Proximos Eventos</h1>
             <form action="">
-                <h1>Agregar evento</h1>
                 <input type="text" id="nombreEvento" placeholder="Nombre del evento">
                 <input type="date" id="fechaEvento">
                 <input type="submit" id="agregar" value="Agregar">
             </form>
+
+            <hr />
 
             <!-- Cambié el id de la lista a "lstaEventos" para coincidir con el JS -->
             <div class="listaEventos2" id="lstaEventos"></div>
