--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="eventos">
         <div class="formulario">
-            <h1>Proximos Eventos</h1>
+            <h1>Proximos Eventos <img src="img/eventos.png" alt="Eventos" width="50" height="50"></h1>
             <form action="">
                 <input type="text" id="nombreEvento" placeholder="Nombre del evento">
                 <input type="date" id="fechaEvento">
@@ -23,6 +23,9 @@
 
             <!-- Cambié el id de la lista a "lstaEventos" para coincidir con el JS -->
             <div class="listaEventos2" id="lstaEventos"></div>
+            <footer>
+                <a href="https://www.flaticon.es/iconos-gratis/eventos" title="eventos iconos">Eventosiconoscreadospor Vectors Tank - Flaticon</a>
+            </footer>
         </div>
     </div>
     <script src="scripts/main.js"></script>
